Bug 514407 - liquify preview stopped working on large canvas
Summary: liquify preview stopped working on large canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-10 08:33 UTC by Ming Chuan
Modified: 2026-01-19 11:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ming Chuan 2026-01-10 08:33:01 UTC
SUMMARY


STEPS TO REPRODUCE
1. Create a A1 600ppi canvas (7008x11811)
2. Draw a line
3. Use free transform tool
4. Right click and choose liquify
5. drag on canvas, notice that there is no preview
6. Apply the transform, the line got transformed as expected, suggesting that it's a visual preview issue

For some reason this only happens on large canvas. It works on A4 300ppi canvas.


OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
krita-6.0.0-prealpha-3f968be4ab-x86_64 linux appimage

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2026-01-19 11:19:55 UTC
Git commit 72547ebdd08708d48f82e7c8470fbc879b3f490b by Dmitry Kazakov, on behalf of Agata Cacko.
Committed on 19/01/2026 at 11:19.
Pushed by dkazakov into branch 'master'.

Fix Liquify Accurate with Instant Preview

Before this commit, in some cases the Accurate with Instant Preview mode
wouldn't work properly for Liquify. The preview would remain unchanged.
This was caused by the level of detail not being applied to the
accumulated stroke rect and to the pixel precision.

This commit applies the level of detail scale to both of the above,
fixing the issue.

M  +6    -0    libs/image/kis_liquify_transform_worker.cpp

https://invent.kde.org/graphics/krita/-/commit/72547ebdd08708d48f82e7c8470fbc879b3f490b