Fix Liquify Accurate with Instant Preview

Before this commit, in some cases the Accurate with Instant Preview mode
wouldn't work properly for Liquify. The preview would remain unchanged.
This was caused by the level of detail not being applied to the
accumulated stroke rect and to the pixel precision.

This commit applies the level of detail scale to both of the above,
fixing the issue.

BUG:514407